# crowbotics-lite

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: settings.py  urls.py
app/api/: apps.py  urls.py
app/api/application/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/api/application/migrations/: 0001_initial.py  0002_plan_description.py
app/api/authentication/: apps.py  serializers.py  urls.py  views.py
app/api/helpers/: constants.py  serialization_errors.py
app/core/: env.py
